<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.HomeFragment"
    android:background="@color/md_grey_200" >

    <ImageView
        android:id="@+id/baner"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:background="@drawable/courier_services"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#CD42036E"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_app_name"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/x_large_text"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/normal_padding"/>

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:gravity="center"
            android:textColor="@color/md_grey_400"
            android:textSize="@dimen/medium_text"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_use_app"
            android:textColor="@color/md_grey_500"
            android:textSize="17.8dp"
            android:gravity="center"
            android:layout_below="@id/tv_greeting"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/send_package"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        android:background="@drawable/rounded_layout"
        android:clickable="true"
        android:onClick="sendPackageClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_layout"
        >


        <ImageView
            android:id="@+id/icon_mall"
            android:layout_width="@dimen/large_image"
            android:layout_height="@dimen/large_image"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_local_mall_blue_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/send_package_title"
            android:text="@string/label_send_package"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_mall"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/send_package_subtitle"
            android:text="@string/label_send_package_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:lines="3"
            android:maxLines="3"
            android:textColor="@color/md_grey_500"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/send_package_title"
            app:layout_constraintTop_toBottomOf="@+id/send_package_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courier_terms"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_layout"
        android:clickable="true"
        android:onClick="courierTermsClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_package"
        >


        <ImageView
            android:id="@+id/icon_info"
            android:layout_width="@dimen/large_image"
            android:layout_height="@dimen/large_image"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_info_light_blue_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/courier_terms_title"
            android:text="@string/label_courier_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_info"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/courier_terms_subtitle"
            android:text="@string/label_courier_terms_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:lines="3"
            android:maxLines="3"
            android:textColor="@color/md_grey_500"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/courier_terms_title"
            app:layout_constraintTop_toBottomOf="@+id/courier_terms_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/become_courier"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_layout"
        android:clickable="true"
        android:onClick="becomeCourierClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courier_terms"
        >


        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="@dimen/large_image"
            android:layout_height="@dimen/large_image"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_location_on_purple_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/become_courier_title"
            android:text="@string/label_become_courier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/become_courier_subtitle"
            android:text="@string/label_become_courier_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:lines="3"
            android:maxLines="3"
            android:textColor="@color/md_grey_500"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/become_courier_title"
            app:layout_constraintTop_toBottomOf="@+id/become_courier_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>



<!--
    <com.iko.android.courier.ui.custom.ClickableInfoRow
                android:id="@+id/send_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/label_send_package"
                app:subtitle="@string/label_send_package_info"
                android:drawable="@drawable/ic_local_mall_blue_24dp"
                app:layout_constraintTop_toBottomOf="@+id/baner"
                app:layout_constraintBottom_toBottomOf="@+id/welcome_layout"/>

        <com.iko.android.courier.ui.custom.ClickableInfoRow
                android:id="@+id/courier_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/label_courier_terms"
                app:subtitle="@string/label_courier_terms_info"
                android:drawable="@drawable/ic_info_light_blue_24dp"
                app:layout_constraintTop_toBottomOf="@+id/send_package" android:layout_marginTop="16dp"/>

        <com.iko.android.courier.ui.custom.ClickableInfoRow
                android:id="@+id/become_courier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/label_become_courier"
                app:subtitle="@string/label_become_courier_info"
                android:drawable="@drawable/ic_location_on_purple_24dp"
                app:layout_constraintTop_toBottomOf="@+id/courier_terms" android:layout_marginTop="16dp"/>
-->
</androidx.constraintlayout.widget.ConstraintLayout>